--- a/package.json
+++ b/package.json
@@ -1,12 +1,7 @@
 {
-  "version": "8.19.4",
+  "version": "8.19.4-0",
   "name": "npm",
   "description": "a package manager for JavaScript",
-  "workspaces": [
-    "docs",
-    "smoke-tests",
-    "workspaces/*"
-  ],
   "files": [
     "bin/",
     "lib/",
@@ -36,7 +31,7 @@
   },
   "directories": {
     "bin": "./bin",
-    "doc": "./doc",
+    "doc": "./docs",
     "lib": "./lib",
     "man": "./man"
   },
@@ -67,7 +62,6 @@
     "archy": "~1.0.0",
     "cacache": "^16.1.3",
     "chalk": "^4.1.2",
-    "chownr": "^2.0.0",
     "cli-columns": "^4.0.0",
     "cli-table3": "^0.6.2",
     "columnify": "^1.6.0",
@@ -98,7 +92,6 @@
     "mkdirp": "^1.0.4",
     "mkdirp-infer-owner": "^2.0.0",
     "ms": "^2.1.2",
-    "node-gyp": "^9.1.0",
     "nopt": "^6.0.0",
     "npm-audit-report": "^3.0.0",
     "npm-install-checks": "^5.0.0",
@@ -126,8 +119,7 @@
     "tiny-relative-date": "^1.3.0",
     "treeverse": "^2.0.0",
     "validate-npm-package-name": "^4.0.0",
-    "which": "^2.0.2",
-    "write-file-atomic": "^4.0.1"
+    "which": "^2.0.2"
   },
   "bundleDependencies": [
     "@isaacs/string-locale-compare",
@@ -142,7 +134,6 @@
     "archy",
     "cacache",
     "chalk",
-    "chownr",
     "cli-columns",
     "cli-table3",
     "columnify",
@@ -173,7 +164,6 @@
     "mkdirp",
     "mkdirp-infer-owner",
     "ms",
-    "node-gyp",
     "nopt",
     "npm-audit-report",
     "npm-install-checks",
@@ -201,70 +191,8 @@
     "tiny-relative-date",
     "treeverse",
     "validate-npm-package-name",
-    "which",
-    "write-file-atomic"
+    "which"
   ],
-  "devDependencies": {
-    "@npmcli/docs": "^1.0.0",
-    "@npmcli/eslint-config": "^3.1.0",
-    "@npmcli/git": "^3.0.2",
-    "@npmcli/promise-spawn": "^3.0.0",
-    "@npmcli/template-oss": "4.11.4",
-    "licensee": "^9.0.0",
-    "nock": "^13.2.4",
-    "npm-packlist": "^5.1.3",
-    "remark": "^14.0.2",
-    "remark-gfm": "^3.0.1",
-    "remark-github": "^11.2.4",
-    "spawk": "^1.7.1",
-    "tap": "^16.0.1"
-  },
-  "scripts": {
-    "dependencies": "node scripts/bundle-and-gitignore-deps.js && node scripts/dependency-graph.js",
-    "dumpconf": "env | grep npm | sort | uniq",
-    "licenses": "licensee --production --errors-only",
-    "pretest": "node scripts/rebuild.js cmark-gfm",
-    "test": "tap",
-    "test-all": "node . run test -ws -iwr --if-present",
-    "snap": "tap",
-    "prepack": "node . run build -w docs",
-    "test:nocleanup": "NO_TEST_CLEANUP=1 node . run test --",
-    "sudotest": "sudo node . run run test --",
-    "sudotest:nocleanup": "sudo NO_TEST_CLEANUP=1 node . run test --",
-    "posttest": "node . run lint",
-    "lint": "eslint \"**/*.js\"",
-    "lintfix": "node . run lint -- --fix",
-    "lint-all": "node . run lint -ws -iwr --if-present",
-    "prelint": "rimraf test/npm_cache*",
-    "resetdeps": "node scripts/resetdeps.js",
-    "rp-pull-request": "node scripts/update-authors.js",
-    "postlint": "template-oss-check",
-    "template-oss-apply": "template-oss-apply --force"
-  },
-  "tap": {
-    "test-env": [
-      "LC_ALL=sk"
-    ],
-    "color": 1,
-    "files": "test/{lib,bin,index.js}",
-    "timeout": 600,
-    "nyc-arg": [
-      "--exclude",
-      "docs/**",
-      "--exclude",
-      "smoke-tests/**",
-      "--exclude",
-      "workspaces/**",
-      "--exclude",
-      "tap-snapshots/**"
-    ],
-    "test-ignore": "^(docs|smoke-tests|workspaces)/"
-  },
-  "templateOSS": {
-    "//@npmcli/template-oss": "This file is partially managed by @npmcli/template-oss. Edits may be overwritten.",
-    "version": "4.11.4",
-    "content": "./scripts/template-oss/root.js"
-  },
   "license": "Artistic-2.0",
   "engines": {
     "node": "^12.13.0 || ^14.15.0 || >=16.0.0"
